# okotools

./: .dockerignore  .editorconfig  .gitattributes  .gitignore  .gitmodules  README.md  create-web.sh  docker-compose.yml  index.html  renovate.json
.circleci/: config.yml
ajour/: .gitignore  README.md  fetch-latest-data.sh  setup.py
ajour-sync/: README.md
ajour-sync/server/: Dockerfile  README.md  docker-compose.prod.yml  docker-compose.yml  pyproject.toml
ajour-sync/server/container/: start.sh
ajour-sync/server/src/: server.py
bank/: README.md  renamer.sh
bankavstemming/: .editorconfig  .gitignore  README.md  convert.py
fu-soknader/: main.aux  main.fdb_latexmk  main.fls  main.tex  readme.md
mamutexport/: README.md  exporter.py  parser.py
okolinks/: README.md  header.html  index.html
quickorder-errors/: fetch_quickorder_purchases.py  readme.md
quickorder-feil-script/: fetch_zettle_purchases.py  get_quickorder_errors.py
skjemaer/: README.md  create-dist.sh  index.html  oppdater_siste.sh
tripletex/: .gitignore  README.md  budsjett.py  export.py  fetch_budget_data.py  fetch_tripletex_data.py  importer.py  pyproject.toml  reports.py  settings.py  setup.py  test_tripletex.py  tripletex.py
tripletex-importer/: .gitignore  Dockerfile  README.md  build.sh  docker-compose.yml  shell.sh
tripletex-testing/: .gitignore  tripletex.py
tripletexweb/: Dockerfile  build.sh  deploy.sh  nginx-okoreports.conf  run-nginx.sh  run.sh
utleggs-og-kortskjema-automatisering/: README.md  main.py  nettskjema_api.py  nettskjema_utils.py  pdf_utils.py  utils.py  (+2 more)
(+196 files in other folders)
