[tool.poetry]
name = "cyb-ajour-sync-server"
version = "0.1.0"
description = ""
authors = ["Henrik Steen <henrist@henrist.net>"]

[tool.poetry.dependencies]
python = "^3.8"
Flask = "^1.1.1"
gunicorn = "^23.0.0"

[tool.poetry.dev-dependencies]
pytest = "^5.2"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
